--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
                 <input type="checkbox" name="agree" value="agree" >
                 <lable class="mr-4" for="agree">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</lable>
             </div>
-
-            <input class="contact-comfirm fw-b" type="button" value="確認送出">
-        </form>    
+        </form>   
+        <a href="#" class="contact-comfirm fz-16 fw-b">確認送出</a>
+ 
     </div>
     <!-- 聯絡我們END -->
 
