--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!-- 聯名設計END -->
 
     <!-- 顧客推薦 -->
-    <div class="container ">
+    <div class="container recommend-container">
         <h2 class="recommend-title fz-48 fw-b txt-deepRed ta-c mb-48">顧客推薦</h2>
         <ul class="recommend mb-160">
             <li class="recommend-item mr-24">
