--- a/index.html
+++ b/index.html
@@ -66,31 +66,36 @@
                     <p class="fz-16">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
             </li>
         </ul>
+    </div>
+    <!-- 品牌介紹END -->
+    
+    <!-- 經典系列 -->
+    <div class="container classicalSeries-container">
+        <h2 class="classical-title fz-48 ta-c txt-deepRed fw-b mb-48">經典系列鏡框</h2>
 
-        <h2 class="classical-title fz-48 txt-deepRed fw-b mb-48">經典系列鏡框</h2>
-
-        <ul class="classicalSeries fs-i mb-80">
+        <ul class="classicalSeries ta-c fs-i mb-80">
             <li class="classicalSeries-item mr-24">
                 <a class="fz-48 fw-bk txt-red" href="#">
                     <img class="mb-8" src="img/home-section3-1.png" alt="OPTICAL">
-                    OPTICAL
+                    <p>OPTICAL</p>
                 </a>
             </li>
             <li class="classicalSeries-item mr-24">
                 <a class="fz-48 fw-bk txt-red" href="#">
                     <img class="mb-8" src="img/home-section3-2.png" alt="SUNGLASSES">
-                    SUNGLASSES
+                    <p>SUNGLASSES</p>
                 </a>
             </li>
             <li class="classicalSeries-item">
                 <a class="fz-48 fw-bk txt-red" href="#">
                     <img class="mb-8" src="img/home-section3-3.png" alt="FUNCTIONAL">
-                    FUNCTIONAL
+                    <p>FUNCTIONAL</p>
                 </a>
             </li>
         </ul>     
     </div>
-    <!-- 品牌介紹END -->
+   
+    <!-- 經典系列END -->
 
     <!-- 聯名設計 -->
     <div class="co-brand-bg ta-c mb-80">
