--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- 導覽列 -->
     <div class="nav">
-        <div class="nav_container">
+        <div class="nav-container tablet-container">
             <h1 class="logo"><a href="#">logo</a></h1>
             <ul class="menu">
                 <li><a class="fz-20 txt-white mr-64" href="#">系列鏡框</a></li>
@@ -30,7 +30,7 @@
     <!-- 導覽列END -->
     <!-- banner -->
     <div class="header mb-80">
-        <div class="header-container container">
+        <div class="header-container container tablet-container">
             <div class="slogan">
                 <h3 class="fz-36 fw-r txt-deepRed">Promise-Desert 2020 早春系列</h3>
                 <h2 class="fz-64 fw-b txt-deepRed mb-4">看得清，才能看得遠</h2>
@@ -41,7 +41,7 @@
     <!-- bannerEND -->
 
     <!-- 品牌介紹 -->
-    <div class="container ta-c">
+    <div class="container intro-container tablet-container ta-c">
         <h2 class="intro-title fz-48 txt-deepRed fw-b mb-32">用專業的心，做專業的事</h2>
         <ul class="intro mb-160">
             <li class="intro-item mr-24">
@@ -70,7 +70,7 @@
     <!-- 品牌介紹END -->
     
     <!-- 經典系列 -->
-    <div class="container classicalSeries-container">
+    <div class="container classicalSeries-container tablet-container">
         <h2 class="classical-title fz-48 ta-c txt-deepRed fw-b mb-48">經典系列鏡框</h2>
 
         <ul class="classicalSeries ta-c fs-i mb-80">
@@ -99,7 +99,7 @@
 
     <!-- 聯名設計 -->
     <div class="co-brand-bg ta-c mb-80">
-        <div class="container co-brand-container">
+        <div class="container co-brand-container tablet-container">
             <h2 class="co-brand-title fz-48 fw-b txt-white mb-48">聯名設計鏡框</h2>
             <ul class="co-brand fs-i">
                 <li class="co-brand-item">
@@ -120,7 +120,7 @@
     <!-- 聯名設計END -->
 
     <!-- 顧客推薦 -->
-    <div class="container recommend-container">
+    <div class="container recommend-container tablet-container">
         <h2 class="recommend-title fz-48 fw-b txt-deepRed ta-c mb-48">顧客推薦</h2>
         <ul class="recommend mb-160">
             <li class="recommend-item mr-24">
@@ -160,7 +160,7 @@
     <!-- 顧客推薦END -->
 
     <!-- 聯絡我們 -->
-    <div class="contact-container">
+    <div class="contact-container tablet-container">
         <h2 class="contact-tilte fz-48 fw-b txt-deepRed ta-c mb-48">聯絡我們</h2>
         <h4 class="mb-24">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</h4>
 
@@ -189,7 +189,7 @@
 
     <!-- footer -->
     <div class="footer-bg">
-    <div class="footer-container txt-white">
+    <div class="footer-container tablet-container txt-white">
         <div class="footer">
             <div class="subNav">
                 <ul class="subMenu mb-36">
