--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             </li>
             <li class="intro-item mr-24">
-                    <img class="intro-icon mb-24" src="img/home-section2-2.png"" alt="20 分鐘即可取件">
+                    <img class="intro-icon mb-24" src="img/home-section2-2.png" alt="20 分鐘即可取件">
                     <h3 class="fz-24 fw-b txt-deepRed mb-8">20 分鐘即可取件</h3>
                     <p class="fz-16">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
             </li>
