--- a/sunglasses_page_1.html
+++ b/sunglasses_page_1.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="all.css">
         <link rel="stylesheet" href="sunglasses_page_1.css">
-        <link rel="stylesheet" href="rwd.css">
+        <link rel="stylesheet" href="rwd_sunglasses_page_1.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
@@ -26,6 +26,11 @@
                     <li><a class="fz-20 txt-white mr-64" href="#">部落格</a></li>
                     <li><a class="fz-20 txt-white" href="#">常見問題</a></li>
                 </ul>
+                <a class="hamberger">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>  
+                </a>
             </div>
         </div>
         <!-- 導覽列END -->
