--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </a>
             </li>
             <li class="classicalSeries-item mr-24">
-                <a class="fz-48 fw-bk txt-red" href="#" target="_blank">
+                <a class="fz-48 fw-bk txt-red" href="https://hd1313169.github.io/week3Mission_2/" target="_blank">
                     <img class="mb-8" src="img/home-section3-2.png" alt="SUNGLASSES">
                     <p>SUNGLASSES</p>
                 </a>
