--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <!-- 導覽列 -->
     <div class="nav">
         <div class="nav-container tablet-container">
-            <h1 class="logo"><a href="https://hd1313169.github.io/week3Mission/">logo</a></h1>
+            <h1 class="logo"><a href="https://hd1313169.github.io/week3Mission_home/">logo</a></h1>
             <ul class="menu">
                 <li><a class="fz-20 txt-white mr-64" href="#">系列鏡框</a></li>
-                <li><a class="fz-20 txt-white mr-64" href="https://hd1313169.github.io/week3Mission_3/" target="_blank">門市據點</a></li>
+                <li><a class="fz-20 txt-white mr-64" href="https://hd1313169.github.io/week3Mission_locations/">門市據點</a></li>
                 <li><a class="fz-20 txt-white mr-64" href="#">部落格</a></li>
                 <li><a class="fz-20 txt-white" href="#">常見問題</a></li>
             </ul>
@@ -75,19 +75,19 @@
 
         <ul class="classicalSeries ta-c fs-i mb-80">
             <li class="classicalSeries-item mr-24">
-                <a class="fz-48 fw-bk txt-red" href="#">
+                <a class="fz-48 fw-bk txt-red" href="https://hd1313169.github.io/week3Mission_optical/">
                     <img class="mb-8" src="img/home-section3-1.png" alt="OPTICAL">
                     <p>OPTICAL</p>
                 </a>
             </li>
             <li class="classicalSeries-item mr-24">
-                <a class="fz-48 fw-bk txt-red" href="https://hd1313169.github.io/week3Mission_2/" target="_blank">
+                <a class="fz-48 fw-bk txt-red" href="https://hd1313169.github.io/week3Mission_sunglasses/">
                     <img class="mb-8" src="img/home-section3-2.png" alt="SUNGLASSES">
                     <p>SUNGLASSES</p>
                 </a>
             </li>
             <li class="classicalSeries-item">
-                <a class="fz-48 fw-bk txt-red" href="#">
+                <a class="fz-48 fw-bk txt-red" href="https://hd1313169.github.io/week3Mission_functional/">
                     <img class="mb-8" src="img/home-section3-3.png" alt="FUNCTIONAL">
                     <p>FUNCTIONAL</p>
                 </a>
@@ -193,9 +193,9 @@
         <div class="footer">
             <div class="subNav">
                 <ul class="subMenu mb-36">
-                    <li class="mr-48"><a class="fz-16 txt-white" href="#">首頁</a></li>
+                    <li class="mr-48"><a class="fz-16 txt-white" href="https://hd1313169.github.io/week3Mission_home/">首頁</a></li>
                     <li class="mr-48"><a class="fz-16 txt-white" href="#">系列鏡框</a></li>
-                    <li class="mr-48"><a class="fz-16 txt-white" href="#">門市據點</a></li>
+                    <li class="mr-48"><a class="fz-16 txt-white" href="https://hd1313169.github.io/week3Mission_locations/">門市據點</a></li>
                     <li class="mr-48"><a class="fz-16 txt-white" href="#">部落格</a></li>
                     <li><a class="txt-white" href="#">常見問題</a></li>
                 </ul>
