--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <ul class="menu">
                 <li><a class="fz-20 txt-white mr-64" href="#">系列鏡框</a></li>
                 <li><a class="fz-20 txt-white mr-64" href="https://hd1313169.github.io/week3Mission_locations/">門市據點</a></li>
-                <li><a class="fz-20 txt-white mr-64" href="#">部落格</a></li>
-                <li><a class="fz-20 txt-white" href="#">常見問題</a></li>
+                <li><a class="fz-20 txt-white mr-64" href="https://hd1313169.github.io/week3Mission_blog/">部落格</a></li>
+                <li><a class="fz-20 txt-white" href="https://hd1313169.github.io/week3Mission_faq/">常見問題</a></li>
             </ul>
         </div>
     </div>
@@ -196,8 +196,8 @@
                     <li class="mr-48"><a class="fz-16 txt-white" href="https://hd1313169.github.io/week3Mission_home/">首頁</a></li>
                     <li class="mr-48"><a class="fz-16 txt-white" href="#">系列鏡框</a></li>
                     <li class="mr-48"><a class="fz-16 txt-white" href="https://hd1313169.github.io/week3Mission_locations/">門市據點</a></li>
-                    <li class="mr-48"><a class="fz-16 txt-white" href="#">部落格</a></li>
-                    <li><a class="txt-white" href="#">常見問題</a></li>
+                    <li class="mr-48"><a class="fz-16 txt-white" href="https://hd1313169.github.io/week3Mission_blog/">部落格</a></li>
+                    <li><a class="txt-white" href="https://hd1313169.github.io/week3Mission_faq/">常見問題</a></li>
                 </ul>
                 <h2 class="contact-item mb-8">
                     <span class="material-symbols-outlined mr-22">call</span>                
@@ -209,9 +209,9 @@
                 </h2>
             </div>
             <div class="social">
-                <a class="mr-32" href=""><img src="img/ic-social-fb.png" alt="facebook"></a>
-                <a class="mr-32" href=""><img src="img/ic_social_ig.png" alt="instagram"></a>
-                <a class="mr-32" href=""><img src="img/ic_social_line.png" alt="line"></a>
+                <a class="mr-32" href="#"><img src="img/ic-social-fb.png" alt="facebook"></a>
+                <a class="mr-32" href="#"><img src="img/ic_social_ig.png" alt="instagram"></a>
+                <a class="mr-32" href="#"><img src="img/ic_social_line.png" alt="line"></a>
             </div>
         </div>
         <div class="copyright">
